--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -8,11 +8,15 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    paths:
+      - "./client/**"
     
   pull_request:
     branches:
     - main
     - dev
+    paths:
+      - "./client/**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
